--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -30,7 +30,7 @@ jobs:
         npm run build
     - name: Start frontend
       run: |
-        docker-compose up --detach
+        docker compose up --detach
     - name: Wait for frontend
       uses: docker://benel/wait-for-response:1
       with:
