--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -1,11 +1,7 @@
 name: test_consultation
 on:
   push:
-  
-
 jobs:
-
-
   build:
     runs-on: ubuntu-latest
 
@@ -27,7 +23,7 @@ jobs:
     - name: Generate sample
       run: |
         mkdir moz-todo-react/public
-        npx --yes dummy-json moz-todo-react/sample_data.hbs > moz-todo-react/public/sample_data.json 
+        npx --yes dummy-json sample_data.hbs > moz-todo-react/public/sample_data.json 
     - name: Build frontend
       run: |
         cd moz-todo-react
