--- a/.github/actions/start/action.yml
+++ b/.github/actions/start/action.yml
@@ -11,9 +11,14 @@ runs:
         path: moz-todo-react/dist
     - name: Start containers
       run: |
-        docker compose up --detach
+        export COUCHDB_USER="leon"
+        export COUCHDB_PASSWORD="GL03!"
       shell: bash
     - name: Wait for frontend
       uses: docker://benel/wait-for-response:1
       with:
         args: http://localhost/ 200 30000 500
+    - name: Wait for backend
+      uses: docker://benel/wait-for-response:1
+      with:
+        args: http://localhost:5984/qvotidie/_all_docs?limit=10 200 30000 500
