--- a/.github/actions/start/action.yml
+++ b/.github/actions/start/action.yml
@@ -21,4 +21,4 @@ runs:
     - name: Wait for backend
       uses: docker://benel/wait-for-response:1
       with:
-        args: http://localhost:5984/qvotidie/_all_docs?limit=10 200 300000 500
+        args: http://localhost:5984/calendes/_all_docs?limit=10 200 30000 500
