--- a/.github/actions/start/action.yml
+++ b/.github/actions/start/action.yml
@@ -19,7 +19,16 @@ runs:
       uses: docker://benel/wait-for-response:1
       with:
         args: http://localhost/ 200 30000 500
+
+    - name: Get samples
+      uses: actions/download-artifact@v4
+      with:
+        name: samples
+    - name: Upload samples
+      run: |
+        curl -X POST http://localhost:5984/calendes/_bulk_docs -H "Content-Type: application/json" -d @sample_data.json
+      shell: bash
     - name: Wait for backend
       uses: docker://benel/wait-for-response:1
       with:
-        args: http://localhost:5984/calendes/_all_docs?limit=10 200 300000 500
+        args: http://localhost:5984/calendes/_all_docs?limit=10 200 30000 500
