--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -37,7 +37,7 @@ jobs:
         uses: actions/checkout@v5
       - name: Generate sample
         run: |
-          npx --yes dummy-json moz-todo-react/sample_data.hbs > sample_data.json
+          npx --yes dummy-json sample_data.hbs > sample_data.json
       - name: Save samples for later
         uses: actions/upload-artifact@v4
         with:
